--- a/.github/workflows/deploy_ec2.yml
+++ b/.github/workflows/deploy_ec2.yml
@@ -10,29 +10,28 @@ on:
 
 jobs:
   build:
-    if_merged:
-      if: github.event.pull_request.merged == true
-      name: "Terraform build"
-      runs-on: ubuntu-latest
+    #if_merged:
+      #if: github.event.pull_request.merged == true
+    name: "Terraform build"
+    runs-on: ubuntu-latest
 
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        AWS_REGION: 'us-east-1'
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_REGION: 'us-east-1'
 
-      steps:
-        # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-        - name: Checkout
-          uses: actions/checkout@v4
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
       
-        - name: Setup Terraform
-          uses: hashicorp/setup-terraform@v2
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
 
-        - name: Terraform Apply
-          run:
-            cd terraform/ 
-            terraform init
-            terraform validate
-            terraform plan -auto-approve
-            terraform apply -auto-approve
+      - name: Terraform Apply
+        run:
+          cd terraform/ 
+          terraform init
+          terraform validate
+          terraform plan -auto-approve
+          terraform apply -auto-approve
 
