random image tag in docker_push and split jobs in deploy_ec2

--- a/.github/workflows/deploy_ec2.yml
+++ b/.github/workflows/deploy_ec2.yml
@@ -27,11 +27,19 @@ jobs:
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
 
-      - name: Terraform Apply
-        run:
-          cd terraform/ 
-          terraform init
-          terraform validate
-          terraform plan -auto-approve
-          terraform apply -auto-approve
+      - name: Get into terraform directory
+        run: cd terraform/ 
+      
+      - name: Terraform Init
+        run: terraform init
+
+      - name: Terraform Validate
+        run: terraform validate
+
+      - name: Terraform Plan
+        run: terraform plan -auto-approve
+
+      - name: Terraform apply
+        run: terraform apply -auto-approve
+
 
