--- a/.github/workflows/docker_push.yml
+++ b/.github/workflows/docker_push.yml
@@ -25,13 +25,21 @@ jobs:
         - name: Login to Amazon ECR
           id: login-aws-ecr
           uses: aws-actions/amazon-ecr-login@v1
+
+        - name: Get commit hash
+          id: get-commit-hash
+          run: echo "::set-output name=commit-hash::$(git rev-parse --short HEAD)"
+
+        - name: Get timestamp
+          id: get-timestamp
+          run: echo "::set-output name=timestamp::$(date +'%Y-%m-%d-%H-%M')"
           
 
         - name: Build and push the tagged docker image to Amazon ECR
           env:
             ECR_REGISTRY: ${{ steps.login-aws-ecr.outputs.registry }}
             ECR_REPOSITORY: ${{ secrets.AWS_ECR_REPO }}
-            IMAGE_TAG: latest
+            IMAGE_TAG: ${{ steps.get-commit-hash.outputs.commit-hash }}-${{ steps.get-timestamp.outputs.timestamp }}
           run: |
             docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
             docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
