--- a/.github/workflows/deploy_ec2.yml
+++ b/.github/workflows/deploy_ec2.yml
@@ -37,7 +37,7 @@ jobs:
         run: terraform validate
 
       - name: Terraform Plan
-        run: terraform plan -auto-approve
+        run: terraform plan
 
       - name: Terraform apply
         run: terraform apply -auto-approve
