--- a/.github/workflows/deploy_ec2.yml
+++ b/.github/workflows/deploy_ec2.yml
@@ -31,15 +31,15 @@ jobs:
         run: cd terraform/ 
       
       - name: Terraform Init
-        run: terraform init
+        run: terraform init 
 
       - name: Terraform Validate
         run: terraform validate
 
       - name: Terraform Plan
-        run: terraform plan
+        run: pwd 
 
-      - name: Terraform apply
-        run: terraform apply -auto-approve
+          #- name: Terraform apply
+          #run: terraform apply -auto-approve
 
 
