--- a/.github/workflows/deploy_ec2.yml
+++ b/.github/workflows/deploy_ec2.yml
@@ -15,28 +15,25 @@ jobs:
     name: "Terraform build"
     runs-on: ubuntu-latest
 
-    env:
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_REGION: 'us-east-1'
-
+    
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
-      
+        uses: actions/checkout@v3
+
+      - name: Setup AWS ECR Details
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: 'us-east-1'
+
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
       
-      - name: Terraform Init
-        run: terraform init terraform/ 
-
-      - name: Terraform Validate
-        run: terraform validate terraform/
-
-      - name: Terraform Plan
-        run: terraform plan terraform/
-
-      - name: Terraform apply
-        run: terraform apply -auto-approve terrafomrm/
-
-
+      - name: Terraform Apply
+        run: 
+          cd terraform/ 
+          terraform init 
+          terraform validate 
+          terraform plan 
+          terraform apply -auto-approve
